# pygel

./: README.md  meson.build  pyproject.toml
pygel/linalg/: array.py
pygel/linalg/src/: array.c  array.h
pygel/linalg/tests/: test_linalg.py
