[build-system]
requires = ["meson-python", "ninja"]
build-backend = "mesonpy"

[project]
name = "pygel"
version = "0.1.0"
description = "Econometrics library with C backend."

dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[tool.meson-python]
where = ["build"]
