[build-system]
requires = ["meson-python", "ninja"]
build-backend = "mesonpy"

[project]
name = "pygel"
version = "0.1.0"
authors = [
    { name = "Alexander Eriksson" }
]
readme = "README.md"
description = "Econometrics library with C backend."

dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
